src/css/_post.scss
/* ... */
.lazyimage {
    background-color: $yellow;
    display: block;
    min-height: 20rem;
    opacity: 0;
    transition: opacity 1s ease-in-out;
    width: 100%;
    &--loaded {
        opacity: 1;
    }
    > .image {
        display: block;
        width: 100%;
    }
}


//post info
// .post-info {
//     margin-bottom: 20rem;
//     display: flex;
//     &__hook {
//         background-color: #fff710;
//         padding: 3rem 3rem 10rem 3rem;
//         height: auto;
//         min-height: 28rem;
//         @media (max-width: 55rem) {
//             padding: 2rem 2rem 5rem 2rem;
//         }       
//         &__title {
//             margin: 0;
//             font-family: $bold-font-stack;
//             max-width: 80%;
//             color: #31343F;
//             line-height: 1.25;
//             font-size: 3.1rem;
//             letter-spacing: -0.1px;
//             margin-bottom: 2rem;
//             @media (max-width: 55rem) {
//                 font-size: 2rem;
//                 max-width: 100%;
//             }
//         }
//     }
//     &__meta {
//         display: flex;
//         flex-flow: row nowrap;
//         border: 1px solid #999da2;
//         // padding: 2rem;
//         @media (max-width: 55rem) {
//             flex-flow: column nowrap;
//         }
//         &__item {
//             flex: 1;
//             padding: 3rem;
//             justify-content: space-between;
//             align-items: flex-start;
//             display: flex;
//             flex-flow: column nowrap;
//             display: flex;
//             @media (max-width: 55rem) {
//                 display: block;
//             }
//             &:first-child {
//                 margin-left: 0;
//                 border-right: 1px solid #999da2;
//                 @media (max-width: 55rem) {
//                     border-right: 0;
//                     border-bottom: 1px solid #999da2;
//                 }
//             }
//             &:last-child {
//                 margin-right: 0;
//                 border-left: 1px solid #999da2;
//                 @media (max-width: 55rem) {
//                     border-left: 0;
//                     border-top: 1px solid #999da2;
//                 }
//             }
//             &__title {
//                 margin: 0;
//                 font-size: 1.3rem;
//                 font-family: "ITC";
//                 font-family: "Univers";
//                 text-decoration: underline;
//                 margin: 0 0 2rem 0;
//             }
//             &__detail {
//                 font-size: 1.2rem;
//                 font-family: $primary-font-stack;
//                 font-family: "Univers";
//                 line-height: 1.6;
//                 margin: 0;
//                 list-style: none;
//                 position: relative;
//                 padding-left: 0;
//                 // list-style-image: url("../../../assets/img/diamond.svg");
//                 &__item {
//                     position: relative;
//                     &--list {
//                         padding-left: 1.5rem;
//                         position: relative;
//                         &:before {
//                             content: "";
//                             position: absolute;
//                             top: 50%;
//                             transform: translateY(-50%);
//                             left: 0;
//                             width: 10px;
//                             height: 10px;
//                             background-size: 10px;
//                             background-position: center;
//                             background-repeat: no-repeat;
//                             background-image: url("./assets/img/diamond.svg");
//                         }
//                     }
//                 }
//             }
//         }
//     }
// }

